beats cards donne

--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -16,6 +16,11 @@
       </a>
     </div>
   </div>
-  <mat-icon matBadge="15"> shopping_cart </mat-icon>
-  <!-- the matBadge steel need fix -->
+  <mat-icon
+    matBadge="15"
+    aria-hidden="false"
+    aria-label="Shopping cart with 15 items"
+  >
+    shopping_cart
+  </mat-icon>
 </div>
