--- a/src/app/common/beat-card/beat-card.component.html
+++ b/src/app/common/beat-card/beat-card.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col gap-3">
-  <div class="relative w-fit min-w-[400px]">
+  <div class="relative w-fit md:min-w-[400px]">
     <img
       [src]="imageUrl"
       [alt]="beat.title"
