--- a/src/app/common/navbar/navbar.component.html
+++ b/src/app/common/navbar/navbar.component.html
@@ -1,4 +1,6 @@
-<div class="flex w-full py-2 items-center">
+<div
+  class="flex w-full py-2 items-center fixed top-0 left-0 right-0 z-50 p-[100px]"
+>
   <div class="flex flex-1 gap-7 nav-container">
     <span class="text-3xl uppercase font-bolt"> bat4you </span>
     <div class="flex gap-5 items-center">
