--- a/src/app/pages/landing/beats-pages/beats-pages.component.html
+++ b/src/app/pages/landing/beats-pages/beats-pages.component.html
@@ -1,22 +1,27 @@
-<div class="">
-  <div class="py-10">
+<div class="py-15">
+  <div class="pb-10 flex justify-between items-center">
     <div class="flex flex-col gap-2">
       <h2 class="text-4xl font-bold">Browse Beats</h2>
       <span class="text-lg text-gray-600"
         >Find the perfect instrumental for you next track.</span
       >
     </div>
-    <div>
-      <div class="w-[250px]">
+    <div class="flex items-center gap-4">
+      <div class="w-[250px] bg-gray-100 rounded flex items-center px-2">
+        <mat-icon> search </mat-icon>
         <input
           type="text"
           placeholder="Search..."
-          class="w-full p-2 bg-gray-100 rounded"
+          class="w-full py-2 placeholder:text-gray-500"
         />
+      </div>
+      <div class="flex items-center gap-2 bg-gray-100 p-2 rounded w-[150px]">
+        <mat-icon> filter_alt </mat-icon>
+        <span> All </span>
       </div>
     </div>
   </div>
-  <div class="grid grid-cols-1 gap-4 lg:grid-cols-2 2xl:grid-cols-3">
+  <div class="grid grid-cols-1 gap-12 lg:grid-cols-2 2xl:grid-cols-3">
     <app-beat-card *ngFor="let beat of beats" [beat]="beat" />
   </div>
 </div>
