feat: add description and cart components

--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -25,6 +25,6 @@
     </div>
   </div>
 </div>
-<div class="px-[20px] md:px-[100px]">
-  <app-beats-pages />
-</div>
+
+<app-beats-pages />
+<app-description />
