--- a/src/app/pages/landing/beats-pages/beats-pages.component.html
+++ b/src/app/pages/landing/beats-pages/beats-pages.component.html
@@ -1,4 +1,4 @@
-<div class="py-15">
+<div class="py-15 px-[20px] md:px-[100px]">
   <div class="pb-10 flex justify-between items-center">
     <div class="flex flex-col gap-2">
       <h2 class="text-4xl font-bold">Browse Beats</h2>
