feat: add footer component and integrate into landing page

--- a/src/app/pages/landing/description/description.component.html
+++ b/src/app/pages/landing/description/description.component.html
@@ -22,7 +22,9 @@
       Browse our collection of premium beats and find perfect sound for your
       project.
     </span>
-    <button class="bg-black py-2 px-5 text-white rounded-xl hover:bg-gray-800">
+    <button
+      class="bg-black py-2.5 px-5 text-white rounded-xl hover:bg-gray-800"
+    >
       Browse Beats
     </button>
   </div>
